--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: './go.mod'
-        run: go version
+      - run: go version
       - name: Format
         run: gofmt -l -w .
       - name: Test 
