--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v3
         with:
-          go-version: './go.mod'
+          go-version-file: './go.mod'
       - run: go version
       - name: Format
         run: gofmt -l -w .
