--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,12 @@ jobs:
         with:
           go-version-file: './go.mod'
       - run: go version
-      - name: Format
-        run: gofmt -l -w .
+      # - name: Format
+      #   run: gofmt -l -w .
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          # Optional: version of golangci-lint to use in form of v1.2 or v1.2.3 or `latest` to use the latest version
+          version: v1.29
       - name: Test 
         run: go test -v
