--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,12 +13,21 @@ jobs:
         with:
           go-version-file: './go.mod'
       - run: go version
-      # - name: Format
-      #   run: gofmt -l -w .
+      - name: Format
+        run: gofmt -l -w .
+      - name: Test 
+        run: go test -v
+  golangci:
+    name: lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-go@v3
+        with:
+          go-version-file: './go.mod'
+      - run: go version
+      - uses: actions/checkout@v3
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
           # Optional: version of golangci-lint to use in form of v1.2 or v1.2.3 or `latest` to use the latest version
-          version: v1.29
-      - name: Test 
-        run: go test -v
+          version: latest
