--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
       - uses: actions/setup-go@v3
         with:
-          go-version-file: './go.mod'
+          go-version: ^1.19
       - run: go version
       - uses: actions/checkout@v3
       - name: golangci-lint
