--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,13 +19,13 @@ jobs:
         run: go test -v
   golangci:
     name: lint
-    runs-on: ubuntu-latest
+    # runs-on: ubuntu-latest
     steps:
       # - uses: actions/setup-go@v3
       #   with:
       #     go-version: ^1.19
       # - run: go version
-      # - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
