--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
         run: go test -v
   golangci:
     name: lint
-    # runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       # - uses: actions/setup-go@v3
       #   with:
