rm some unnecessary lins

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,9 +12,9 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version-file: './go.mod'
-      - run: go version
-      - name: Format
-        run: gofmt -l -w .
+      # - run: go version
+      # - name: Format
+      #   run: gofmt -l -w .
       - name: Test 
         run: go test -v
   golangci:
