--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,22 +3,7 @@ run-name: ${{ github.actor }} is testing out GitHub Actions for siwe api 🚀
 on: [push, pull_request]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-      - name: Setup Go
-        uses: actions/setup-go@v3
-        with:
-          go-version-file: './go.mod'
-      # - run: go version
-      # - name: Format
-      #   run: gofmt -l -w .
-      - name: Test 
-        run: go test -v
-  golangci:
-    name: lint
+  lint:
     runs-on: ubuntu-latest
     steps:
       # - uses: actions/setup-go@v3
@@ -31,3 +16,17 @@ jobs:
         with:
           # Optional: version of golangci-lint to use in form of v1.2 or v1.2.3 or `latest` to use the latest version
           version: latest
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup Go
+        uses: actions/setup-go@v3
+        with:
+          go-version-file: './go.mod'
+      # - run: go version
+      # - name: Format
+      #   run: gofmt -l -w .
+      - name: Test 
+        run: go test -v
